# 4C11_assignment_3

./: .gitignore  01_eda_and_preprocessing.ipynb  02_optuna_search.py  02b_optuna_report_plots.py  04_inference_and_testing.ipynb  06_baseline_rno_comparison.py  07_baseline_rno_batch32_study.py  08_paper_rno_h0_check.py  09_paper_rno_hidden_sweep.py  12_hidden_sweep_sample_error_plots.py  README.md  benchmark_device_training.py  coursework_task.md  coursework_theory_notes.md  main.py  make_training_curve_plots.py  plan_v1.md  plan_v2.md  pyproject.toml  report_plan.md  report_structure.md
Coursework3/: RNO_1D_Skeleton.py  __init__.py
Submission/: 00_environment_and_mps.ipynb  02_optuna_search.py  02b_optuna_report_plots.py  11_hidden_state_analysis.ipynb  make_training_curve_plots.py
Submission/Code/: 03_final_training_and_hidden_threshold.ipynb  05_trajectory_and_hysteresis_analysis.ipynb  07_baseline_rno_batch32_study.py  08_paper_rno_h0_check.py  09_paper_rno_hidden_sweep.py  10_loading_case_analysis.ipynb
artifacts/.matplotlib/: fontlist-v390.json
artifacts/checkpoints/: 07_baseline_rno_batch32_accel_hidden_grid_0to4_baseline_rno_h0_seed_20260328.pt  07_baseline_rno_batch32_accel_hidden_grid_0to4_baseline_rno_h0_seed_20260329.pt  07_baseline_rno_batch32_accel_hidden_grid_0to4_baseline_rno_h1_seed_20260328.pt  08_paper_rno_h0_no_rate.pt  08_paper_rno_h0_with_rate.pt  (+126 more)
report/: references.bib  regenerate_report_figures.py  report_figure_style_summary.json  report_initial.tex  report_revised.tex  report_updated.tex  self_marking.md
tools/: generate_notebooks.py
(+510 files in other folders)
