[project]
name = "4c11-assignment-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy<2",
    "optuna>=4.7.0",
    "optuna-dashboard>=0.20.0",
    "pandas>=2.3.3",
    "pydoe>=0.9.3",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]
